# kube-cluster

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml  release.yml  tags.yaml
ansible/: add-node.yaml  ansible.cfg  invenotry.yml  inventory-add-node.yml  inventory-base.yml  inventory-one.yml  inventory.yml  kube.yaml
ansible/group_vars/: main.yml
ansible/roles/cilium/tasks/: main.yml
ansible/roles/containerd/defaults/: main.yml
ansible/roles/containerd/handlers/: main.yml
ansible/roles/containerd/tasks/centos/: main.yml
ansible/roles/containerd/templates/: config.toml.j2  containerd.service.j2
ansible/roles/containerd/templates/registry/: docker.io.toml
ansible/roles/coredns/tasks/: main.yml
ansible/roles/deploy/defaults/: main.yml
ansible/roles/deploy/templates/: ca-csr.json.j2
ansible/roles/etcd/defaults/: main.yml
ansible/roles/etcd/handlers/: main.yml
ansible/roles/etcd/templates/: etcd.config.yml.j2  etcd.service.j2
ansible/roles/helm/tasks/: main.yml
ansible/roles/helm/tasks/centos/: main.yml
ansible/roles/kube-master/defaults/: main.yml
ansible/roles/kube-master/templates/: admin-csr.json.j2  front-proxy-csr.json.j2  kube-apiserver-csr.json.j2  kube-controller-manager-csr.json.j2  kube-scheduler-csr.json.j2
ansible/roles/kube-node/defaults/: main.yml
ansible/roles/kube-node/templates/: kube-proxy-csr.json.j2  kube-proxy.yaml.j2  kubelet-conf.yml.j2
ansible/roles/prepare/firewalld-manager/tasks/: main.yml
release/: kube-cluster.sh
(+21 files in other folders)
