[tool.poetry]
name = "kube-cluster"
version = "0.1.1"
description = ""
authors = ["JamesZhang <irybatty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "2.15.5"
ansible = "8.5.0"
netaddr = "^1.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"